deploy: c344a6dffff0b80b8cbd697927321416166506bf

--- a/toc.html
+++ b/toc.html
@@ -67,8 +67,8 @@
                      <th scope="col" width="20" tabulator-formatter="html" tabulator-headerSort="false" tabulator-download="false">#</th>
                      <th scope="col" width="400" tabulator-headerFilter="input">Titel</th>
                      <th scope="col" width="150" tabulator-headerFilter="input">Dateiname</th>
-                     <th scope="col" width="100" tabulator-headerFilter="input">Datum
-                        (notBefore)</th>
+                     <th scope="col" width="100" tabulator-headerFilter="input">notBefore</th>
+                     <th scope="col" width="100" tabulator-headerFilter="input">notAfter</th>
                      <th scope="col" width="100" tabulator-headerFilter="input">Liturgie</th>
                      <th scope="col" width="400" tabulator-headerFilter="input">Book
                         Type</th>
@@ -87,7 +87,8 @@
                      <td><a href="A64_39.html"><i class="bi bi-link-45deg"></i></a></td>
                      <td>A 64/39</td>
                      <td>A64_39.xml</td>
-                     <td>~1492</td>
+                     <td>1472</td>
+                     <td>1512</td>
                      <td>
                         OFM
                         </td>
@@ -114,7 +115,8 @@
                      <td><a href="A67_22.html"><i class="bi bi-link-45deg"></i></a></td>
                      <td>A 67/22</td>
                      <td>A67_22.xml</td>
-                     <td>15-2</td>
+                     <td>1450</td>
+                     <td>1500</td>
                      <td>
                         OSC
                         </td>
@@ -141,6 +143,7 @@
                      <td><a href="S1_62.html"><i class="bi bi-link-45deg"></i></a></td>
                      <td>Hymnarium Sacrum tam Romanum Urbani Papae VIII recognitum</td>
                      <td>S1_62.xml</td>
+                     <td>1685</td>
                      <td>1685</td>
                      <td>
                         OFM
@@ -169,6 +172,7 @@
                      <td>A 67/43</td>
                      <td>A67_43.xml</td>
                      <td>1636</td>
+                     <td>1636</td>
                      <td>
                         OFM
                         </td>
@@ -192,7 +196,8 @@
                      <td><a href="A70_41.html"><i class="bi bi-link-45deg"></i></a></td>
                      <td>A 70/41</td>
                      <td>A70_41.xml</td>
-                     <td></td>
+                     <td>2023</td>
+                     <td>2023</td>
                      <td>
                         OFM
                         </td>
@@ -214,6 +219,7 @@
                      <td><a href="S1_26.html"><i class="bi bi-link-45deg"></i></a></td>
                      <td>S 1/26</td>
                      <td>S1_26.xml</td>
+                     <td>1732</td>
                      <td>1732</td>
                      <td>
                         OFM
@@ -238,7 +244,8 @@
                      <td><a href="S1_44.html"><i class="bi bi-link-45deg"></i></a></td>
                      <td>S 1/44</td>
                      <td>S1_44.xml</td>
-                     <td>18. Jh.</td>
+                     <td>1700</td>
+                     <td>1799</td>
                      <td>
                         OFM
                         </td>
@@ -265,7 +272,8 @@
                      <td><a href="A67_23.html"><i class="bi bi-link-45deg"></i></a></td>
                      <td>A 67/23</td>
                      <td>A67_23.xml</td>
-                     <td>16x</td>
+                     <td>1600</td>
+                     <td>1699</td>
                      <td>
                         OSC
                         </td>
@@ -290,7 +298,8 @@
                      <td><a href="S1_45.html"><i class="bi bi-link-45deg"></i></a></td>
                      <td>S 1/45</td>
                      <td>S1_45.xml</td>
-                     <td>18. Jh.</td>
+                     <td>1700</td>
+                     <td>1799</td>
                      <td>
                         OFM
                         </td>
@@ -320,6 +329,7 @@
                      <td></td>
                      <td></td>
                      <td></td>
+                     <td></td>
                      <td>[Handschrift]</td>
                      <td></td>
                      <td></td>
@@ -331,7 +341,8 @@
                      <td><a href="A67_19.html"><i class="bi bi-link-45deg"></i></a></td>
                      <td>A 67/19</td>
                      <td>A67_19.xml</td>
-                     <td>15-2</td>
+                     <td>1450</td>
+                     <td>1500</td>
                      <td>
                         OSC
                         </td>
@@ -358,7 +369,8 @@
                      <td><a href="S1_40.html"><i class="bi bi-link-45deg"></i></a></td>
                      <td>S 1/40</td>
                      <td>S1_40.xml</td>
-                     <td>18. Jh.</td>
+                     <td>1700</td>
+                     <td>1799</td>
                      <td>
                         OFM
                         </td>
@@ -382,7 +394,8 @@
                      <td><a href="S1_39.html"><i class="bi bi-link-45deg"></i></a></td>
                      <td>S 1/39</td>
                      <td>S1_39.xml</td>
-                     <td>17. Jh.</td>
+                     <td>1600</td>
+                     <td>1699</td>
                      <td>
                         OFM
                         </td>
@@ -409,6 +422,7 @@
                      <td>Das 4. Respons Buch</td>
                      <td>A67_41.xml</td>
                      <td>1636</td>
+                     <td>1636</td>
                      <td>
                         OFM
                         </td>
@@ -434,6 +448,7 @@
                      <td><a href="A70_23.html"><i class="bi bi-link-45deg"></i></a></td>
                      <td>Libellus Antiphonarum</td>
                      <td>A70_23.xml</td>
+                     <td>1674</td>
                      <td>1674</td>
                      <td>
                         OFM
@@ -464,6 +479,7 @@
                      <td></td>
                      <td></td>
                      <td></td>
+                     <td></td>
                      <td>[Handschrift]</td>
                      <td></td>
                      <td></td>
@@ -475,7 +491,8 @@
                      <td><a href="A67_20.html"><i class="bi bi-link-45deg"></i></a></td>
                      <td>A 67/20</td>
                      <td>A67_20.xml</td>
-                     <td>15-2</td>
+                     <td>1450</td>
+                     <td>1500</td>
                      <td>
                         OSC
                         </td>
@@ -502,6 +519,7 @@
                      <td><a href="A64_42.html"><i class="bi bi-link-45deg"></i></a></td>
                      <td>A 64/42</td>
                      <td>A64_42.xml</td>
+                     <td>1492</td>
                      <td>1492</td>
                      <td>
                         OFM
@@ -530,6 +548,7 @@
                      <td>Antiphonarium de Tempore et Sanctis Pro Choro Graecensi</td>
                      <td>S1_25.xml</td>
                      <td>1753</td>
+                     <td>1753</td>
                      <td>
                         OFM
                         </td>
@@ -556,6 +575,7 @@
                      <td>Das 4. Respons Buch</td>
                      <td>A67_42.xml</td>
                      <td>1636</td>
+                     <td>1636</td>
                      <td>
                         OFM
                         </td>
@@ -581,7 +601,8 @@
                      <td><a href="S1_23.html"><i class="bi bi-link-45deg"></i></a></td>
                      <td>S 1/23</td>
                      <td>S1_23.xml</td>
-                     <td>18. Jh.</td>
+                     <td>1700</td>
+                     <td>1799</td>
                      <td>
                         OFM
                         </td>
@@ -605,6 +626,7 @@
                      <td><a href="S1_22.html"><i class="bi bi-link-45deg"></i></a></td>
                      <td>S 1/22</td>
                      <td>S1_22.xml</td>
+                     <td>1685</td>
                      <td>1685</td>
                      <td>
                         OFM
@@ -630,7 +652,8 @@
                      <td><a href="A67_44.html"><i class="bi bi-link-45deg"></i></a></td>
                      <td>A 67/44</td>
                      <td>A67_44.xml</td>
-                     <td>16</td>
+                     <td>1500</td>
+                     <td>1599</td>
                      <td>
                         OFM
                         </td>
@@ -654,7 +677,8 @@
                      <td><a href="A64_37.html"><i class="bi bi-link-45deg"></i></a></td>
                      <td>A 64/37</td>
                      <td>A64_37.xml</td>
-                     <td>~1492</td>
+                     <td>1472</td>
+                     <td>1512</td>
                      <td>
                         OFM
                         </td>
@@ -683,6 +707,7 @@
                      <td>Tota pulchra</td>
                      <td>S1_19.xml</td>
                      <td>1710</td>
+                     <td>1710</td>
                      <td>
                         OFM
                         </td>
@@ -706,7 +731,8 @@
                      <td><a href="A64_34.html"><i class="bi bi-link-45deg"></i></a></td>
                      <td>A 64/34</td>
                      <td>A64_34.xml</td>
-                     <td>14-2/4</td>
+                     <td>1425</td>
+                     <td>1450</td>
                      <td>
                         OFM
                         </td>
@@ -730,6 +756,7 @@
                      <td><a href="S1_75.html"><i class="bi bi-link-45deg"></i></a></td>
                      <td>Ordo agendorum et cantandorum in actibus processionalibus</td>
                      <td>S1_75.xml</td>
+                     <td>1702</td>
                      <td>1702</td>
                      <td>
                         OFM
@@ -758,6 +785,7 @@
                      <td>S 1/72</td>
                      <td>S1_72.xml</td>
                      <td>1683</td>
+                     <td>1683</td>
                      <td></td>
                      <td>
                         Psalterium
@@ -779,6 +807,7 @@
                      <td><a href="S1_58.html"><i class="bi bi-link-45deg"></i></a></td>
                      <td>S 1/58</td>
                      <td>S1_58.xml</td>
+                     <td>1740</td>
                      <td>1740</td>
                      <td>
                         OFM
@@ -804,7 +833,8 @@
                      <td><a href="A67_27.html"><i class="bi bi-link-45deg"></i></a></td>
                      <td>Pro divino officio in choro</td>
                      <td>A67_27.xml</td>
-                     <td>16-2/4</td>
+                     <td>1625</td>
+                     <td>1650</td>
                      <td>
                         OSC
                         </td>
@@ -831,7 +861,8 @@
                      <td><a href="A64_40.html"><i class="bi bi-link-45deg"></i></a></td>
                      <td>A 64/40</td>
                      <td>A64_40.xml</td>
-                     <td>~1492</td>
+                     <td>1472</td>
+                     <td>1512</td>
                      <td>
                         OFM
                         </td>
@@ -859,6 +890,7 @@
                      <td>Ordo agendorum et cantandorum in actibus processionalibus</td>
                      <td>S1_74.xml</td>
                      <td>1702</td>
+                     <td>1702</td>
                      <td>
                         OFM
                         </td>
@@ -885,7 +917,8 @@
                      <td><a href="A70_45.html"><i class="bi bi-link-45deg"></i></a></td>
                      <td>Antiphonas Festorum Principaliorum</td>
                      <td>A70_45.xml</td>
-                     <td></td>
+                     <td>2023</td>
+                     <td>2023</td>
                      <td>
                         OFM
                         </td>
@@ -910,6 +943,7 @@
                      <td>Antiphonarium de Sanctis Trium Ordinum Sancti Patris Francisci</td>
                      <td>S1_69.xml</td>
                      <td>1737</td>
+                     <td>1737</td>
                      <td>
                         OFM
                         </td>
@@ -933,6 +967,7 @@
                      <td><a href="S1_61.html"><i class="bi bi-link-45deg"></i></a></td>
                      <td>Hymni Sacri Breviarii Romani Urbani Papae VIII Auctoritate recogniti</td>
                      <td>S1_61.xml</td>
+                     <td>1685</td>
                      <td>1685</td>
                      <td>
                         OFM
@@ -962,7 +997,8 @@
                      <td><a href="A64_41.html"><i class="bi bi-link-45deg"></i></a></td>
                      <td>A 64/41</td>
                      <td>A64_41.xml</td>
-                     <td>~1492</td>
+                     <td>1472</td>
+                     <td>1512</td>
                      <td>
                         OFM
                         </td>
@@ -989,7 +1025,8 @@
                      <td><a href="A64_38.html"><i class="bi bi-link-45deg"></i></a></td>
                      <td>A 64/38</td>
                      <td>A64_38.xml</td>
-                     <td>~1492</td>
+                     <td>1472</td>
+                     <td>1512</td>
                      <td>
                         OFM
                         </td>
@@ -1015,6 +1052,7 @@
                      <td>S 1/65</td>
                      <td>S1_65.xml</td>
                      <td>1690</td>
+                     <td>1690</td>
                      <td>
                         OFM
                         </td>
@@ -1039,6 +1077,7 @@
                      <td>Antiphonarium de Sanctis Ordinis Minorum</td>
                      <td>S1_67.xml</td>
                      <td>1690</td>
+                     <td>1690</td>
                      <td>
                         OFM
                         </td>
@@ -1062,6 +1101,7 @@
                      <td><a href="S1_40a.html"><i class="bi bi-link-45deg"></i></a></td>
                      <td>Cantus Ecclesiasticus</td>
                      <td>S1_40a.xml</td>
+                     <td>1765</td>
                      <td>1765</td>
                      <td>
                         OESA
@@ -1089,6 +1129,7 @@
                      <td>S 1/68</td>
                      <td>S1_68.xml</td>
                      <td>1729</td>
+                     <td>1729</td>
                      <td></td>
                      <td>
                         Graduale
@@ -1110,6 +1151,7 @@
                      <td><a href="A63_51.html"><i class="bi bi-link-45deg"></i></a></td>
                      <td>A 63/51</td>
                      <td>A63_51.xml</td>
+                     <td>1517</td>
                      <td>1517</td>
                      <td>
                         OFM
@@ -1137,7 +1179,8 @@
                      <td><a href="S1_28.html"><i class="bi bi-link-45deg"></i></a></td>
                      <td>S 1/28</td>
                      <td>S1_28.xml</td>
-                     <td>18. Jh.</td>
+                     <td>1700</td>
+                     <td>1799</td>
                      <td>
                         OSC
                         </td>
@@ -1161,6 +1204,7 @@
                      <td><a href="S1_63.html"><i class="bi bi-link-45deg"></i></a></td>
                      <td>Hymni Sacri Breviarii Romani Urbani Papae VIII Auctoritate recogniti</td>
                      <td>S1_63.xml</td>
+                     <td>1685</td>
                      <td>1685</td>
                      <td>
                         OFM
@@ -1190,7 +1234,8 @@
                      <td><a href="A67_18.html"><i class="bi bi-link-45deg"></i></a></td>
                      <td>A 67/18</td>
                      <td>A67_18.xml</td>
-                     <td>15-2</td>
+                     <td>1450</td>
+                     <td>1500</td>
                      <td>
                         OSC
                         </td>
@@ -1217,7 +1262,8 @@
                      <td><a href="S1_27.html"><i class="bi bi-link-45deg"></i></a></td>
                      <td>S 1/27</td>
                      <td>S1_27.xml</td>
-                     <td>18. Jh.</td>
+                     <td>1700</td>
+                     <td>1799</td>
                      <td>
                         OFM
                         </td>
@@ -1242,6 +1288,7 @@
                      <td>S 1/66</td>
                      <td>S1_66.xml</td>
                      <td>1610</td>
+                     <td>1610</td>
                      <td></td>
                      <td>
                         Graduale
@@ -1263,7 +1310,8 @@
                      <td><a href="A67_17.html"><i class="bi bi-link-45deg"></i></a></td>
                      <td>A 67/17</td>
                      <td>A67_17.xml</td>
-                     <td>15-2</td>
+                     <td>1450</td>
+                     <td>1500</td>
                      <td>
                         OSC
                         </td>
@@ -1292,6 +1340,7 @@
                      <td>S 1/30</td>
                      <td>S1_30.xml</td>
                      <td>1769</td>
+                     <td>1769</td>
                      <td>
                         OFM
                         </td>
@@ -1315,6 +1364,7 @@
                      <td><a href="S1_70.html"><i class="bi bi-link-45deg"></i></a></td>
                      <td>Hymni Sacri Breviarii Romani Urbani Papae VIII Auctoritate recogniti</td>
                      <td>S1_70.xml</td>
+                     <td>1685</td>
                      <td>1685</td>
                      <td>
                         OFM
@@ -1345,6 +1395,7 @@
                      <td>S 1/29</td>
                      <td>S1_29.xml</td>
                      <td>1762</td>
+                     <td>1762</td>
                      <td>
                         OESA
                         </td>
@@ -1372,6 +1423,7 @@
                      <td>S 1/24</td>
                      <td>S1_24.xml</td>
                      <td>1779</td>
+                     <td>1779</td>
                      <td>
                         OFM
                         </td>
@@ -1395,7 +1447,8 @@
                      <td><a href="A64_43.html"><i class="bi bi-link-45deg"></i></a></td>
                      <td>A 64/43</td>
                      <td>A64_43.xml</td>
-                     <td>~1492</td>
+                     <td>1472</td>
+                     <td>1512</td>
                      <td>
                         OFM
                         </td>
@@ -1422,6 +1475,7 @@
                      <td><a href="S1_64.html"><i class="bi bi-link-45deg"></i></a></td>
                      <td>Psalterium Romanum dispositum per Hebdomadam</td>
                      <td>S1_64.xml</td>
+                     <td>1739</td>
                      <td>1739</td>
                      <td>
                         OFM
