--- a/search.html
+++ b/search.html
@@ -49,8 +49,8 @@
                      </li>
                      <li class="nav-item"><a class="nav-link" href="toc.html" data-i18n="navbar__works"></a></li>
                      <li class="nav-item dropdown disabled"><a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false" data-i18n="navbar__register"></a><ul class="dropdown-menu">
-                           <li><a class="dropdown-item" href="listperson.html" data-i18n="navbar__drucker"></a></li>
                            <li><a class="dropdown-item" href="listplace.html" data-i18n="navbar__places"></a></li>
+                           <li><a class="dropdown-item" href="listperson.html" data-i18n="navbar__persons"></a></li>
                         </ul>
                      </li>
                      <li class="nav-item"><a title="Suche" class="nav-link" href="search.html" data-i18n="navbar__search"></a></li><select name="language" id="languageSwitcher"></select></ul>
@@ -73,10 +73,10 @@
                <div class="footer-widget col-lg-3 col-md-4 col-sm-3 ml-auto">
                   <div class="textwidget custom-html-widget">
                      <h6 class="font-weight-bold">ACDH-CH</h6>
-                     <p>Austrian Centre for Digital Humanities  and Cultural Heritage
-                         Österreichische Akademie der Wissenschaften </p>
-                     <p> Bäckerstraße 13  1010 Wien </p>
-                     <p> T: +43 1 51581-2200  E: <a href="mailto:acdh-ch-helpdesk@oeaw.ac.at                                 ">acdh-ch-helpdesk(at)oeaw.ac.at</a></p>
+                     <p>Austrian Centre for Digital Humanities <br/> and Cultural Heritage
+                        <br/> Österreichische Akademie der Wissenschaften </p>
+                     <p> Bäckerstraße 13 <br/> 1010 Wien </p>
+                     <p> T: +43 1 51581-2200 <br/> E: <a href="mailto:acdh-ch-helpdesk@oeaw.ac.at                                 ">acdh-ch-helpdesk(at)oeaw.ac.at</a></p>
                   </div>
                </div>
                <div class="footer-widget col-lg-3 col-md-4 col-sm-3 ml-auto">
@@ -98,5 +98,5 @@ function addDarkmodeWidget() {
 	new Darkmode().showWidget();
 }
 window.addEventListener('load', addDarkmodeWidget);
-</script><script  src="js/i18n.js"></script></body>
+</script><script  src="js/i18n.js"></script><script src="https://cdn.jsdelivr.net/npm/instantsearch.js@4.46.0"></script><script src="https://cdn.jsdelivr.net/npm/typesense-instantsearch-adapter@2/dist/typesense-instantsearch-adapter.min.js"></script><script src="js/ts_index.js"></script></body>
 </html>
