--- a/index.html
+++ b/index.html
@@ -61,6 +61,19 @@
       <main class="flex-shrink-0">
          <div class="container">
             <h1 style="text-align:center;">OFM</h1>
+            <div id="carouselExampleControls" class="carousel slide" data-ride="carousel" style="margin:20px">
+               <div class="carousel-inner">
+                  <div class="carousel-item active"><img class="d-block w-100" src="img/ofmgraz_01.png" alt="First slide"></div>
+                  <div class="row">
+                     <div class="col-md-6">
+                        <h1 style="text-align:center"><a class="btn btn-main btn-outline-primary btn-lg" href="about.html" role="button">Über die Edition</a></h1>
+                     </div>
+                     <div class="col-md-6">
+                        <h1 style="text-align:center"><a class="btn btn-main btn-outline-primary btn-lg" href="toc.html" role="button">Alle Dokumente</a></h1>
+                     </div>
+                  </div>
+               </div>
+            </div>
             <h2 style="text-align:center;">Choralhandschriften der Zentralbibliothek der Wiener Franziskanerprovinz Graz</h2>
          </div>
       </main>
