deploy: 9558ca6650641f52c98dee3e07d48d5f887c1468

--- a/index.html
+++ b/index.html
@@ -75,7 +75,8 @@
                   </div>
                </div>
             </div>
-            <h2 style="text-align:center;">Choralhandschriften der Zentralbibliothek der Wiener Franziskanerprovinz Graz</h2>
+            <h2 style="text-align:center;">horalhandschriften und Drucke der Zentralbibliothek der Wiener Franziskanerprovinz
+               Graz</h2>
          </div>
       </main>
       <footer class="footer mt-auto py-3 bg-body-tertiary">
