deploy: fba748a1af44aabd4b2ee03d7715c3811c9cc84f

--- a/Graz.html
+++ b/Graz.html
@@ -68,7 +68,7 @@
                      <th>
                         Ortsname
                         </th>
-                     <td>Graz</td>
+                     <td>Graz Graz Graz</td>
                   </tr>
                   <tr>
                      <th>
