--- a/Ljubljana.html
+++ b/Ljubljana.html
@@ -68,7 +68,7 @@
                      <th>
                         Ortsname
                         </th>
-                     <td>Ljubljana</td>
+                     <td>Ljubljana Ljubljana Lubiana</td>
                   </tr>
                   <tr>
                      <th>
