--- a/MariaLankowitz.html
+++ b/MariaLankowitz.html
@@ -68,7 +68,7 @@
                      <th>
                         Ortsname
                         </th>
-                     <td>Maria Lankowitz</td>
+                     <td>Maria Lankowitz Maria Lankowitz Maria Lankowitz</td>
                   </tr>
                   <tr>
                      <th>
