--- a/MauterninSteiermark.html
+++ b/MauterninSteiermark.html
@@ -68,7 +68,7 @@
                      <th>
                         Ortsname
                         </th>
-                     <td>Mautern in Steiermark</td>
+                     <td>Mautern in Steiermark Mautern in Steiermark Mautern in Steiermark</td>
                   </tr>
                   <tr>
                      <th>
