--- a/Salzburg.html
+++ b/Salzburg.html
@@ -68,7 +68,7 @@
                      <th>
                         Ortsname
                         </th>
-                     <td>Salzburg</td>
+                     <td>Salzburg Salzburg Salisburgo</td>
                   </tr>
                   <tr>
                      <th>
