--- a/Muenchen.html
+++ b/Muenchen.html
@@ -6,7 +6,7 @@
       <meta  name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
       <meta  name="mobile-web-app-capable" content="yes">
       <meta  name="apple-mobile-web-app-capable" content="yes">
-      <meta  name="apple-mobile-web-app-title" content="München">
+      <meta  name="apple-mobile-web-app-title" content="Munich">
       <meta  name="msapplication-TileColor" content="#ffffff">
       <meta  name="msapplication-TileImage" content="images/logo.png">
       <link  rel="None" type="image/ico" href="images/favicons/favicon.ico">
@@ -32,7 +32,7 @@
       <link  rel="shortcut icon" type="image/png" href="images/favicons/favicon-196x196.png">
       <link  rel="icon" type="image/svg+xml" href="images/logo.png" sizes="any">
       <link  rel="profile" href="http://gmpg.org/xfn/11">
-      <title >München</title>
+      <title >Munich</title>
       <link  href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
       <link  rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css">
       <link  rel="stylesheet" href="css/style.css" type="text/css">
@@ -61,14 +61,14 @@
       </header>
       <main>
          <div class="container">
-            <h1 class="text-center pb-4 pt-3">München</h1>
+            <h1 class="text-center pb-4 pt-3">Munich</h1>
             <table class="table entity-table">
                <tbody>
                   <tr>
                      <th>
                         Ortsname
                         </th>
-                     <td>München</td>
+                     <td>Munich München Monaco di Baviera</td>
                   </tr>
                   <tr>
                      <th>
