--- a/listplace.html
+++ b/listplace.html
@@ -6,7 +6,7 @@
       <meta  name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
       <meta  name="mobile-web-app-capable" content="yes">
       <meta  name="apple-mobile-web-app-capable" content="yes">
-      <meta  name="apple-mobile-web-app-title" content="OFM Graz: Orte">
+      <meta  name="apple-mobile-web-app-title" content="Locations">
       <meta  name="msapplication-TileColor" content="#ffffff">
       <meta  name="msapplication-TileImage" content="images/logo.png">
       <link  rel="None" type="image/ico" href="images/favicons/favicon.ico">
@@ -32,7 +32,7 @@
       <link  rel="shortcut icon" type="image/png" href="images/favicons/favicon-196x196.png">
       <link  rel="icon" type="image/svg+xml" href="images/logo.png" sizes="any">
       <link  rel="profile" href="http://gmpg.org/xfn/11">
-      <title >OFM Graz: Orte</title>
+      <title >Locations</title>
       <link  href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
       <link  rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css">
       <link  rel="stylesheet" href="css/style.css" type="text/css">
@@ -61,7 +61,7 @@
       </header>
       <main>
          <div class="container">
-            <h1 class="text-center pb-4 pt-3">OFM Graz: Orte</h1>
+            <h1 class="text-center pb-4 pt-3">Locations</h1>
             <div id="map"></div>
             <table class="table" id="myTable">
                <thead>
@@ -75,11 +75,11 @@
                </thead>
                <tbody>
                   <tr>
-                     <td><a href="FranziskanerKirche.html"><i class="bi bi-link-45deg"></i></a></td>
-                     <td>Franziskaner Kirche</td>
+                     <td><a href="FCG.html"><i class="bi bi-link-45deg"></i></a></td>
+                     <td>Franciscan Church</td>
                      <td>47.070483333333</td>
                      <td>15.436780555556</td>
-                     <td>FranziskanerKirche</td>
+                     <td>FCG</td>
                   </tr>
                   <tr>
                      <td><a href="Graz.html"><i class="bi bi-link-45deg"></i></a></td>
@@ -97,7 +97,7 @@
                   </tr>
                   <tr>
                      <td><a href="Wien.html"><i class="bi bi-link-45deg"></i></a></td>
-                     <td>Wien</td>
+                     <td>Vienna</td>
                      <td>48.208333333333336</td>
                      <td>16.3725</td>
                      <td>Wien</td>
@@ -111,7 +111,7 @@
                   </tr>
                   <tr>
                      <td><a href="Venedig.html"><i class="bi bi-link-45deg"></i></a></td>
-                     <td>Venedig</td>
+                     <td>Venice</td>
                      <td>45.439722222222</td>
                      <td>12.331944444444</td>
                      <td>Venedig</td>
@@ -125,14 +125,14 @@
                   </tr>
                   <tr>
                      <td><a href="Muenchen.html"><i class="bi bi-link-45deg"></i></a></td>
-                     <td>München</td>
+                     <td>Munich</td>
                      <td>48.1375</td>
                      <td>11.575</td>
                      <td>Muenchen</td>
                   </tr>
                   <tr>
                      <td><a href="StPoelten.html"><i class="bi bi-link-45deg"></i></a></td>
-                     <td>St. Pölten</td>
+                     <td>Sankt Pölten</td>
                      <td>48.2</td>
                      <td>15.616666666667</td>
                      <td>StPoelten</td>
