--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
             <h1 style="text-align:center;">OFM</h1>
             <div id="carouselExampleControls" class="carousel slide" data-ride="carousel" style="margin:20px">
                <div class="carousel-inner">
-                  <div class="carousel-item active"><img class="d-block w-100" src="img/ofmgraz_01.png" alt="First slide"></div>
+                  <div class="carousel-item active"><img class="d-block w-100" src="img/ofmgraz_01.jpg" alt="First slide"></div>
                   <div class="row">
                      <div class="col-md-6">
                         <h1 style="text-align:center"><a class="btn btn-main btn-outline-primary btn-lg" href="about.html" role="button">Über die Edition</a></h1>
