--- a/listplace.html
+++ b/listplace.html
@@ -76,73 +76,83 @@
                <tbody>
                   <tr>
                      <td><a href="FCG.html"><i class="bi bi-link-45deg"></i></a></td>
-                     <td>Franciscan Church</td>
+                     <td>Franziskanerkirche</td>
                      <td>47.070483333333</td>
                      <td>15.436780555556</td>
-                     <td>FCG</td>
+                     <td>
+                        #FCG</td>
                   </tr>
                   <tr>
                      <td><a href="Graz.html"><i class="bi bi-link-45deg"></i></a></td>
                      <td>Graz</td>
                      <td>47.07083333333333</td>
                      <td>15.438611111111111</td>
-                     <td>Graz</td>
+                     <td>
+                        #Graz</td>
                   </tr>
                   <tr>
                      <td><a href="Ljubljana.html"><i class="bi bi-link-45deg"></i></a></td>
                      <td>Ljubljana</td>
                      <td>46.05138888888889</td>
                      <td>14.50611111111111</td>
-                     <td>Ljubljana</td>
+                     <td>
+                        #Ljubljana</td>
                   </tr>
                   <tr>
                      <td><a href="Wien.html"><i class="bi bi-link-45deg"></i></a></td>
-                     <td>Vienna</td>
+                     <td></td>
                      <td>48.208333333333336</td>
                      <td>16.3725</td>
-                     <td>Wien</td>
+                     <td>
+                        #Wien</td>
                   </tr>
                   <tr>
                      <td><a href="Salzburg.html"><i class="bi bi-link-45deg"></i></a></td>
                      <td>Salzburg</td>
                      <td>47.8</td>
                      <td>13.045</td>
-                     <td>Salzburg</td>
+                     <td>
+                        #Salzburg</td>
                   </tr>
                   <tr>
                      <td><a href="Venedig.html"><i class="bi bi-link-45deg"></i></a></td>
-                     <td>Venice</td>
+                     <td>Venedig</td>
                      <td>45.439722222222</td>
                      <td>12.331944444444</td>
-                     <td>Venedig</td>
+                     <td>
+                        #Venedig</td>
                   </tr>
                   <tr>
                      <td><a href="MariaLankowitz.html"><i class="bi bi-link-45deg"></i></a></td>
                      <td>Maria Lankowitz</td>
                      <td>47.063888888889</td>
                      <td>15.063055555556</td>
-                     <td>MariaLankowitz</td>
+                     <td>
+                        #MariaLankowitz</td>
                   </tr>
                   <tr>
                      <td><a href="Muenchen.html"><i class="bi bi-link-45deg"></i></a></td>
-                     <td>Munich</td>
+                     <td>München</td>
                      <td>48.1375</td>
                      <td>11.575</td>
-                     <td>Muenchen</td>
+                     <td>
+                        #Muenchen</td>
                   </tr>
                   <tr>
                      <td><a href="StPoelten.html"><i class="bi bi-link-45deg"></i></a></td>
-                     <td>Sankt Pölten</td>
+                     <td>St. Pölten</td>
                      <td>48.2</td>
                      <td>15.616666666667</td>
-                     <td>StPoelten</td>
+                     <td>
+                        #StPoelten</td>
                   </tr>
                   <tr>
                      <td><a href="MauterninSteiermark.html"><i class="bi bi-link-45deg"></i></a></td>
                      <td>Mautern in Steiermark</td>
                      <td>47.4</td>
                      <td>14.833333333333</td>
-                     <td>MauterninSteiermark</td>
+                     <td>
+                        #MauterninSteiermark</td>
                   </tr>
                </tbody>
             </table>
