deploy: a4de02b35c12e7d4f3c60bf343b6b9f8a52192de

--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
                   </div>
                </div>
             </div>
-            <h2 style="text-align:center;">horalhandschriften und Drucke der Zentralbibliothek der Wiener Franziskanerprovinz
+            <h2 style="text-align:center;">Choralhandschriften und Drucke der Zentralbibliothek der Wiener Franziskanerprovinz
                Graz</h2>
          </div>
       </main>
