--- a/Balleoni.html
+++ b/Balleoni.html
@@ -94,6 +94,18 @@
                         </th>
                      <td><a href="" target="_blank">Q112399622</a></td>
                   </tr>
+                  <tr>
+                     <th>
+                        Erwähnt in
+                        </th>
+                     <td>
+                        <ul>
+                           <li><a href="S1_65.html">S 1/65</a></li>
+                           <li><a href="S1_67.html">Antiphonarium de Sanctis Ordinis Minorum</a></li>
+                           <li><a href="S1_68.html">S 1/68</a></li>
+                        </ul>
+                     </td>
+                  </tr>
                </tbody>
             </table>
          </div>
