--- a/Ciera.html
+++ b/Ciera.html
@@ -88,6 +88,16 @@
                         </th>
                      <td><a href="https://d-nb.info/gnd/1051039606" target="_blank">1051039606</a></td>
                   </tr>
+                  <tr>
+                     <th>
+                        Erwähnt in
+                        </th>
+                     <td>
+                        <ul>
+                           <li><a href="S1_66.html">S 1/66</a></li>
+                        </ul>
+                     </td>
+                  </tr>
                </tbody>
             </table>
          </div>
