--- a/Voigt.html
+++ b/Voigt.html
@@ -94,6 +94,17 @@
                         </th>
                      <td><a href="" target="_blank">Q56118770</a></td>
                   </tr>
+                  <tr>
+                     <th>
+                        Erwähnt in
+                        </th>
+                     <td>
+                        <ul>
+                           <li><a href="S1_74.html">Ordo agendorum et cantandorum in actibus processionalibus</a></li>
+                           <li><a href="S1_75.html">Ordo agendorum et cantandorum in actibus processionalibus</a></li>
+                        </ul>
+                     </td>
+                  </tr>
                </tbody>
             </table>
          </div>
