--- a/Wien.html
+++ b/Wien.html
@@ -68,7 +68,7 @@
                      <th>
                         Ortsname
                         </th>
-                     <td>Vienna Wien Wien</td>
+                     <td>Vienna Wien Vienna</td>
                   </tr>
                   <tr>
                      <th>
