--- a/listplace.html
+++ b/listplace.html
@@ -100,7 +100,7 @@
                   </tr>
                   <tr>
                      <td><a href="Wien.html"><i class="bi bi-link-45deg"></i></a></td>
-                     <td></td>
+                     <td>Wien</td>
                      <td>48.208333333333336</td>
                      <td>16.3725</td>
                      <td>
