--- a/Mayr.html
+++ b/Mayr.html
@@ -88,6 +88,20 @@
                         </th>
                      <td><a href="https://d-nb.info/gnd/124751946" target="_blank">124751946</a></td>
                   </tr>
+                  <tr>
+                     <th>
+                        Erwähnt in
+                        </th>
+                     <td>
+                        <ul>
+                           <li><a href="S1_62.html">Hymnarium Sacrum tam Romanum Urbani Papae VIII recognitum</a></li>
+                           <li><a href="S1_72.html">S 1/72</a></li>
+                           <li><a href="S1_61.html">Hymni Sacri Breviarii Romani Urbani Papae VIII Auctoritate recogniti</a></li>
+                           <li><a href="S1_63.html">Hymni Sacri Breviarii Romani Urbani Papae VIII Auctoritate recogniti</a></li>
+                           <li><a href="S1_70.html">Hymni Sacri Breviarii Romani Urbani Papae VIII Auctoritate recogniti</a></li>
+                        </ul>
+                     </td>
+                  </tr>
                </tbody>
             </table>
          </div>
