--- a/Pezzana.html
+++ b/Pezzana.html
@@ -94,6 +94,17 @@
                         </th>
                      <td><a href="" target="_blank">Q105889193</a></td>
                   </tr>
+                  <tr>
+                     <th>
+                        Erwähnt in
+                        </th>
+                     <td>
+                        <ul>
+                           <li><a href="S1_69.html">Antiphonarium de Sanctis Trium Ordinum Sancti Patris Francisci</a></li>
+                           <li><a href="S1_64.html">Psalterium Romanum dispositum per Hebdomadam</a></li>
+                        </ul>
+                     </td>
+                  </tr>
                </tbody>
             </table>
          </div>
