deploy: ddd66a76379b536a1b4cb30ef026740300179d6e

--- a/Ljubljana.html
+++ b/Ljubljana.html
@@ -67,8 +67,8 @@
                   <tr>
                      <th>
                         Ortsname
-                        </th>
-                     <td>Ljubljana Ljubljana Lubiana</td>
+                        			<a data-i18n="place__placename"></a></th>
+                     <td>Ljubljana</td>
                   </tr>
                   <tr>
                      <th>
@@ -81,6 +81,23 @@
                         Longitude
                         </th>
                      <td>14.50611111111111</td>
+                  </tr>
+                  <tr>
+                     <th>
+                        Erwähnt in
+                        </th>
+                     <td>
+                        <ul>
+                           <li><a href="A64_41.html">A 64/41</a></li>
+                           <li><a href="A67_42.html">A 64/42</a></li>
+                           <li><a href="A64_39.html">A 64/39</a></li>
+                           <li><a href="A64_43.html">A 64/43</a></li>
+                           <li><a href="A64_37.html">A 64/37</a></li>
+                           <li><a href="A64_51.html">A 64/51</a></li>
+                           <li><a href="A64_40.html">A 64/40</a></li>
+                           <li><a href="A64_38.html">A 64/38</a></li>
+                        </ul>
+                     </td>
                   </tr>
                </tbody>
             </table>
