--- a/MariaLankowitz.html
+++ b/MariaLankowitz.html
@@ -67,8 +67,8 @@
                   <tr>
                      <th>
                         Ortsname
-                        </th>
-                     <td>Maria Lankowitz Maria Lankowitz Maria Lankowitz</td>
+                        			<a data-i18n="place__placename"></a></th>
+                     <td>Maria Lankowitz</td>
                   </tr>
                   <tr>
                      <th>
@@ -81,6 +81,19 @@
                         Longitude
                         </th>
                      <td>15.063055555556</td>
+                  </tr>
+                  <tr>
+                     <th>
+                        Erwähnt in
+                        </th>
+                     <td>
+                        <ul>
+                           <li><a href="A64_37.html">A 64/37</a></li>
+                           <li><a href="A64_34.html">A 64/34</a></li>
+                           <li><a href="S1_22.html">S 1/22</a></li>
+                           <li><a href="S1_40.html">S 1/40</a></li>
+                        </ul>
+                     </td>
                   </tr>
                </tbody>
             </table>
