--- a/MauterninSteiermark.html
+++ b/MauterninSteiermark.html
@@ -67,8 +67,8 @@
                   <tr>
                      <th>
                         Ortsname
-                        </th>
-                     <td>Mautern in Steiermark Mautern in Steiermark Mautern in Steiermark</td>
+                        			<a data-i18n="place__placename"></a></th>
+                     <td>Mautern in Steiermark</td>
                   </tr>
                   <tr>
                      <th>
@@ -81,6 +81,16 @@
                         Longitude
                         </th>
                      <td>14.833333333333</td>
+                  </tr>
+                  <tr>
+                     <th>
+                        Erwähnt in
+                        </th>
+                     <td>
+                        <ul>
+                           <li><a href="S1_23.html">S 1/23</a></li>
+                        </ul>
+                     </td>
                   </tr>
                </tbody>
             </table>
