--- a/Salzburg.html
+++ b/Salzburg.html
@@ -67,8 +67,8 @@
                   <tr>
                      <th>
                         Ortsname
-                        </th>
-                     <td>Salzburg Salzburg Salisburgo</td>
+                        			<a data-i18n="place__placename"></a></th>
+                     <td>Salzburg</td>
                   </tr>
                   <tr>
                      <th>
@@ -81,6 +81,20 @@
                         Longitude
                         </th>
                      <td>13.045</td>
+                  </tr>
+                  <tr>
+                     <th>
+                        Erwähnt in
+                        </th>
+                     <td>
+                        <ul>
+                           <li><a href="S1_63.html">Hymni Sacri Breviarii Romani Urbani Papae VIII Auctoritate recogniti</a></li>
+                           <li><a href="S1_70.html">Hymni Sacri Breviarii Romani Urbani Papae VIII Auctoritate recogniti</a></li>
+                           <li><a href="S1_62.html">Hymnarium Sacrum tam Romanum Urbani Papae VIII recognitum</a></li>
+                           <li><a href="S1_72.html">S 1/72</a></li>
+                           <li><a href="S1_61.html">Hymni Sacri Breviarii Romani Urbani Papae VIII Auctoritate recogniti</a></li>
+                        </ul>
+                     </td>
                   </tr>
                </tbody>
             </table>
