--- a/StPoelten.html
+++ b/StPoelten.html
@@ -6,7 +6,7 @@
       <meta  name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
       <meta  name="mobile-web-app-capable" content="yes">
       <meta  name="apple-mobile-web-app-capable" content="yes">
-      <meta  name="apple-mobile-web-app-title" content="Sankt Pölten">
+      <meta  name="apple-mobile-web-app-title" content="St. Pölten">
       <meta  name="msapplication-TileColor" content="#ffffff">
       <meta  name="msapplication-TileImage" content="images/logo.png">
       <link  rel="None" type="image/ico" href="images/favicons/favicon.ico">
@@ -32,7 +32,7 @@
       <link  rel="shortcut icon" type="image/png" href="images/favicons/favicon-196x196.png">
       <link  rel="icon" type="image/svg+xml" href="images/logo.png" sizes="any">
       <link  rel="profile" href="http://gmpg.org/xfn/11">
-      <title >Sankt Pölten</title>
+      <title >St. Pölten</title>
       <link  href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
       <link  rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css">
       <link  rel="stylesheet" href="css/style.css" type="text/css">
@@ -61,14 +61,14 @@
       </header>
       <main>
          <div class="container">
-            <h1 class="text-center pb-4 pt-3">Sankt Pölten</h1>
+            <h1 class="text-center pb-4 pt-3">St. Pölten</h1>
             <table class="table entity-table">
                <tbody>
                   <tr>
                      <th>
                         Ortsname
-                        </th>
-                     <td>Sankt Pölten St. Pölten Sankt Pölten</td>
+                        			<a data-i18n="place__placename"></a></th>
+                     <td>St. Pölten</td>
                   </tr>
                   <tr>
                      <th>
@@ -81,6 +81,17 @@
                         Longitude
                         </th>
                      <td>15.616666666667</td>
+                  </tr>
+                  <tr>
+                     <th>
+                        Erwähnt in
+                        </th>
+                     <td>
+                        <ul>
+                           <li><a href="A67_44.html">A 67/44</a></li>
+                           <li><a href="S1_58.html">S 1/58</a></li>
+                        </ul>
+                     </td>
                   </tr>
                </tbody>
             </table>
