--- a/Venedig.html
+++ b/Venedig.html
@@ -6,7 +6,7 @@
       <meta  name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
       <meta  name="mobile-web-app-capable" content="yes">
       <meta  name="apple-mobile-web-app-capable" content="yes">
-      <meta  name="apple-mobile-web-app-title" content="Venice">
+      <meta  name="apple-mobile-web-app-title" content="Venedig">
       <meta  name="msapplication-TileColor" content="#ffffff">
       <meta  name="msapplication-TileImage" content="images/logo.png">
       <link  rel="None" type="image/ico" href="images/favicons/favicon.ico">
@@ -32,7 +32,7 @@
       <link  rel="shortcut icon" type="image/png" href="images/favicons/favicon-196x196.png">
       <link  rel="icon" type="image/svg+xml" href="images/logo.png" sizes="any">
       <link  rel="profile" href="http://gmpg.org/xfn/11">
-      <title >Venice</title>
+      <title >Venedig</title>
       <link  href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
       <link  rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css">
       <link  rel="stylesheet" href="css/style.css" type="text/css">
@@ -61,14 +61,14 @@
       </header>
       <main>
          <div class="container">
-            <h1 class="text-center pb-4 pt-3">Venice</h1>
+            <h1 class="text-center pb-4 pt-3">Venedig</h1>
             <table class="table entity-table">
                <tbody>
                   <tr>
                      <th>
                         Ortsname
-                        </th>
-                     <td>Venice Venedig Venezia</td>
+                        			<a data-i18n="place__placename"></a></th>
+                     <td>Venedig</td>
                   </tr>
                   <tr>
                      <th>
@@ -81,6 +81,21 @@
                         Longitude
                         </th>
                      <td>12.331944444444</td>
+                  </tr>
+                  <tr>
+                     <th>
+                        Erwähnt in
+                        </th>
+                     <td>
+                        <ul>
+                           <li><a href="S1_66.html">S 1/66</a></li>
+                           <li><a href="S1_65.html">S 1/65</a></li>
+                           <li><a href="S1_69.html">Antiphonarium de Sanctis Trium Ordinum Sancti Patris Francisci</a></li>
+                           <li><a href="S1_64.html">Psalterium Romanum dispositum per Hebdomadam</a></li>
+                           <li><a href="S1_67.html">Antiphonarium de Sanctis Ordinis Minorum</a></li>
+                           <li><a href="S1_68.html">S 1/68</a></li>
+                        </ul>
+                     </td>
                   </tr>
                </tbody>
             </table>
