--- a/Wien.html
+++ b/Wien.html
@@ -6,7 +6,7 @@
       <meta  name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
       <meta  name="mobile-web-app-capable" content="yes">
       <meta  name="apple-mobile-web-app-capable" content="yes">
-      <meta  name="apple-mobile-web-app-title" content="Vienna">
+      <meta  name="apple-mobile-web-app-title" content="Wien">
       <meta  name="msapplication-TileColor" content="#ffffff">
       <meta  name="msapplication-TileImage" content="images/logo.png">
       <link  rel="None" type="image/ico" href="images/favicons/favicon.ico">
@@ -32,7 +32,7 @@
       <link  rel="shortcut icon" type="image/png" href="images/favicons/favicon-196x196.png">
       <link  rel="icon" type="image/svg+xml" href="images/logo.png" sizes="any">
       <link  rel="profile" href="http://gmpg.org/xfn/11">
-      <title >Vienna</title>
+      <title >Wien</title>
       <link  href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
       <link  rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css">
       <link  rel="stylesheet" href="css/style.css" type="text/css">
@@ -61,14 +61,14 @@
       </header>
       <main>
          <div class="container">
-            <h1 class="text-center pb-4 pt-3">Vienna</h1>
+            <h1 class="text-center pb-4 pt-3">Wien</h1>
             <table class="table entity-table">
                <tbody>
                   <tr>
                      <th>
                         Ortsname
-                        </th>
-                     <td>Vienna Wien Vienna</td>
+                        			<a data-i18n="place__placename"></a></th>
+                     <td>Wien</td>
                   </tr>
                   <tr>
                      <th>
@@ -81,6 +81,23 @@
                         Longitude
                         </th>
                      <td>16.3725</td>
+                  </tr>
+                  <tr>
+                     <th>
+                        Erwähnt in
+                        </th>
+                     <td>
+                        <ul>
+                           <li><a href="A64_41.html">A 70/41</a></li>
+                           <li><a href="70_45.html">Antiphonas Festorum Principaliorum</a></li>
+                           <li><a href="A70_23.html">Libellus Antiphonarum</a></li>
+                           <li><a href="S1_29.html">S 1/29</a></li>
+                           <li><a href="S1_40a.html">Cantus Ecclesiasticus</a></li>
+                           <li><a href="S1_75.html">Ordo agendorum et cantandorum in actibus processionalibus</a></li>
+                           <li><a href="S1_74.html">Ordo agendorum et cantandorum in actibus processionalibus</a></li>
+                           <li><a href="A67_21.html">A-Gf_A67_21_Grad_Part3</a></li>
+                        </ul>
+                     </td>
                   </tr>
                </tbody>
             </table>
