--- a/S1_40a.html
+++ b/S1_40a.html
@@ -61,14 +61,17 @@
       </header>
       <main class="flex-shrink-0">
          <div class="container">
-            <div class="regest">
-               <h4></h4>
-               <div class="regest-text"></div>
-            </div>
-            <div class="col-md-8 col-lg-8 col-sm-12">
-               <h1 align="center">Cantus Ecclesiasticus</h1>
-               <h1 class="text-center pb-4 pt-3"><a href="S1_40a.xml"><i class="bi bi-download" title="TEI/XML"></i></a></h1>
-               <h2 style="text-align:center;">Zentralbibliothek der Wiener Franziskanerprovinz Graz</h2>
+            <div  xmlns:local="http://dse-static.foo.bar" xmlns:mam="whatever" class="row">
+               <div class="col-md-2"></div>
+               <div class="col-md-8">
+                  <h1 align="center">Cantus Ecclesiasticus</h1>
+                  <h3 align="center"><a href="S1_40a"><i class="bi bi-download" title="show TEI source"></i></a></h3>
+                  <p class="text-center"><small>
+                        Zentralbibliothek der Wiener Franziskanerprovinz Graz
+                         ,                         
+                        S 1/40a</small></p>
+               </div>
+               <div class="col-md-2 text-end"></div>
             </div>
             <div class="row">
                <div class="col-md-12">
@@ -5146,8 +5149,6 @@
                   <hr>
                </div>
             </div>
-            <div class="col-md-2 col-lg-2 col-sm-12" style="text-align:right"></div>
-            <p style="text-align:center;"></p>
          </div>
       </main>
       <footer  class="footer mt-auto py-3 bg-body-tertiary">
