--- a/A67_21.html
+++ b/A67_21.html
@@ -61,17 +61,16 @@
       </header>
       <main class="flex-shrink-0">
          <div class="container">
-            <div class="regest">
-               <h4></h4>
-               <div class="regest-text"></div>
+            <div  xmlns:local="http://dse-static.foo.bar" xmlns:mam="whatever" class="row">
+               <div class="col-md-2"></div>
+               <div class="col-md-8">
+                  <h1 align="center">A-Gf_A67_21_Grad_Part3</h1>
+                  <h3 align="center"><a href=""><i class="bi bi-download" title="show TEI source"></i></a></h3>
+                  <p class="text-center"><small> ,                         
+                        </small></p>
+               </div>
+               <div class="col-md-2 text-end"></div>
             </div>
-            <div class="col-md-8 col-lg-8 col-sm-12">
-               <h1 align="center">A-Gf_A67_21_Grad_Part3</h1>
-               <h1 class="text-center pb-4 pt-3"><a href=".xml"><i class="bi bi-download" title="TEI/XML"></i></a></h1>
-               <h2 style="text-align:center;"></h2>
-            </div>
-            <div class="col-md-2 col-lg-2 col-sm-12" style="text-align:right"></div>
-            <p style="text-align:center;"></p>
          </div>
       </main>
       <footer  class="footer mt-auto py-3 bg-body-tertiary">
