deploy: 9fce734060f552764aad1e9be2ea87833a40bbba

--- a/A63_51.html
+++ b/A63_51.html
@@ -65,7 +65,7 @@
                <div class="col-md-2"></div>
                <div class="col-md-8">
                   <h1 align="center">A 63/51</h1>
-                  <h3 align="center"><a href="A63_51"><i class="bi bi-download" title="show TEI source"></i></a></h3>
+                  <h3 align="center"><a href="A63_51.xml"><i class="bi bi-download" title="show TEI source"></i></a></h3>
                   <p class="text-center"><small>
                         Zentralbibliothek der Wiener Franziskanerprovinz Graz
                          ,                         
