--- a/A67_18.html
+++ b/A67_18.html
@@ -65,7 +65,7 @@
                <div class="col-md-2"></div>
                <div class="col-md-8">
                   <h1 align="center">A 67/18</h1>
-                  <h3 align="center"><a href="A67_18"><i class="bi bi-download" title="show TEI source"></i></a></h3>
+                  <h3 align="center"><a href="A67_18.xml"><i class="bi bi-download" title="show TEI source"></i></a></h3>
                   <p class="text-center"><small>
                         Zentralbibliothek der Wiener Franziskanerprovinz Graz
                          ,                         
