--- a/A67_21.html
+++ b/A67_21.html
@@ -65,7 +65,7 @@
                <div class="col-md-2"></div>
                <div class="col-md-8">
                   <h1 align="center">A-Gf_A67_21_Grad_Part3</h1>
-                  <h3 align="center"><a href=""><i class="bi bi-download" title="show TEI source"></i></a></h3>
+                  <h3 align="center"><a href=".xml"><i class="bi bi-download" title="show TEI source"></i></a></h3>
                   <p class="text-center"><small> ,                         
                         </small></p>
                </div>
