--- a/A67_42.html
+++ b/A67_42.html
@@ -65,7 +65,7 @@
                <div class="col-md-2"></div>
                <div class="col-md-8">
                   <h1 align="center">Das 4. Respons Buch</h1>
-                  <h3 align="center"><a href="A67_42"><i class="bi bi-download" title="show TEI source"></i></a></h3>
+                  <h3 align="center"><a href="A67_42.xml"><i class="bi bi-download" title="show TEI source"></i></a></h3>
                   <p class="text-center"><small>
                         Zentralbibliothek der Wiener Franziskanerprovinz Graz
                          ,                         
