deploy: c2191992c4037371759a14ed6da055b29c97a246

--- a/toc.html
+++ b/toc.html
@@ -303,26 +303,24 @@
                   </tr>
                   <tr>
                      <td><a href="A67_21.html"><i class="bi bi-link-45deg"></i></a></td>
-                     <td>A 67/22</td>
+                     <td>Tota pulchra</td>
                      <td><a href="A67_21.xml">A67_21.xml</a></td>
-                     <td>1450</td>
-                     <td>1500</td>
+                     <td>1710</td>
+                     <td>1710</td>
                      <td>
-                        OSC
+                        OFM
                         </td>
                      <td>
-                        Graduale
-                        , 
-                        Teil
+                        Gesänge
                         </td>
-                     <td><a href="Muenchen.html">München?</a>, <a href="Graz.html">Graz</a></td>
+                     <td><a href="Graz.html">Graz</a></td>
                      <td>[Handschrift]</td>
-                     <td>136</td>
-                     <td>210</td>
-                     <td>160</td>
+                     <td>114</td>
+                     <td>340</td>
+                     <td>230</td>
                      <td>
-                        
-                        Graduale, Teil 4
+                        Tota pulchra, Lauretanische Litaneien, choraliter / figuraliter, mensuriert
+                        Marianische Gesänge
                         </td>
                      <td>In progress</td>
                   </tr>
