deploy: 999661a81cebdecfb50dfb04085d7f39708b4ade

--- a/listplace_test.html
+++ b/listplace_test.html
@@ -248,8 +248,8 @@ window.addEventListener('load', addDarkmodeWidget);
                     resizable: false,
                     },
                     {
-                    title: "long",
-                    field: "long",
+                    title: "lng",
+                    field: "lng",
                     formatter: "plaintext",
                     resizable: false,
                     },
